--- a/web/themes/custom/new_blog/new_blog.libraries.yml
+++ b/web/themes/custom/new_blog/new_blog.libraries.yml
@@ -16,6 +16,7 @@ global:
       css/article.css: { }
       css/commerce.css: { }
       css/form.css: { }
+      css/view.css: { }
 
 portal:
   css:
