--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,9 @@
         "drupal/core-composer-scaffold": "^10.0",
         "drupal/core-project-message": "^10.0",
         "drupal/core-recommended": "^10.0",
+        "drupal/facets": "^2.0",
+        "drupal/jquery_ui_slider": "^2.0",
+        "drupal/jquery_ui_touch_punch": "^1.1",
         "drupal/layout_builder_modal": "^1.2",
         "drupal/paragraphs": "^1.17",
         "drupal/pathauto": "^1.12",
